[gd_scene load_steps=18 format=2]

[ext_resource path="res://textures/the_key.png" type="Texture" id=1]
[ext_resource path="res://core/player_topdown/Player_Topdown.tscn" type="PackedScene" id=2]
[ext_resource path="res://textures/final_background/final_background1.png" type="Texture" id=3]
[ext_resource path="res://textures/final_background/final_background2.png" type="Texture" id=4]
[ext_resource path="res://textures/final_background/final_background3.png" type="Texture" id=5]
[ext_resource path="res://textures/final_background/final_background4.png" type="Texture" id=6]
[ext_resource path="res://scenes/TopDown_Main.gd" type="Script" id=7]
[ext_resource path="res://fonts/pixel12x10/pixel12x10.tres" type="DynamicFont" id=8]
[ext_resource path="res://textures/Transition.png" type="Texture" id=9]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [  ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ) ],
"loop": true,
"name": "On",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 64 )

[sub_resource type="RectangleShape2D" id=18]

[sub_resource type="Animation" id=20]
resource_name = "Camera_Normal"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("../Camera2D:zoom")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=19]
resource_name = "End"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("../Camera2D:zoom")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 2.14355 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.7, 0.7 ) ]
}
tracks/1/type = "animation"
tracks/1/path = NodePath("../Control/Transition_AnimationPlayer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": PoolStringArray( "FadeIn" ),
"times": PoolRealArray( 1 )
}

[sub_resource type="Theme" id=15]
default_font = ExtResource( 8 )

[sub_resource type="Animation" id=16]
tracks/0/type = "value"
tracks/0/path = NodePath("TransitionSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=17]
tracks/0/type = "value"
tracks/0/path = NodePath("TransitionSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="TopDown_Main" type="Node2D"]
script = ExtResource( 7 )

[node name="World" type="Node2D" parent="."]

[node name="Background" type="AnimatedSprite" parent="World"]
position = Vector2( 180, 120 )
frames = SubResource( 2 )
animation = "On"

[node name="Walls" type="Node2D" parent="World"]
visible = false

[node name="Wall" type="StaticBody2D" parent="World/Walls"]
position = Vector2( 2.52269, 1.24986 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="World/Walls/Wall"]
position = Vector2( 40, 112 )
rotation = 0.0432376
shape = SubResource( 1 )

[node name="Wall9" type="StaticBody2D" parent="World/Walls"]
position = Vector2( 188.313, 69.0483 )
rotation = -1.63439
scale = Vector2( 2.17828, 1.66033 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="World/Walls/Wall9"]
scale = Vector2( 1, 0.2 )
shape = SubResource( 1 )

[node name="Wall7" type="StaticBody2D" parent="World/Walls"]
position = Vector2( 256.374, 19.2811 )
rotation = -0.217483

[node name="CollisionShape2D" type="CollisionShape2D" parent="World/Walls/Wall7"]
position = Vector2( 40, 112 )
rotation = 0.0432376
shape = SubResource( 1 )

[node name="Wall2" type="StaticBody2D" parent="World/Walls"]
position = Vector2( 30.2723, 36.988 )
rotation = -1.76669

[node name="CollisionShape2D" type="CollisionShape2D" parent="World/Walls/Wall2"]
position = Vector2( -153.042, 50.1178 )
rotation = 0.214046
shape = SubResource( 1 )

[node name="Wall11" type="StaticBody2D" parent="World/Walls"]
position = Vector2( 72.1918, 48.2854 )
rotation = -1.76669

[node name="CollisionShape2D" type="CollisionShape2D" parent="World/Walls/Wall11"]
position = Vector2( -164.647, 70.4974 )
rotation = -1.26273
shape = SubResource( 1 )

[node name="Wall5" type="StaticBody2D" parent="World/Walls"]
position = Vector2( 193.406, 16.386 )
rotation = -1.76669

[node name="CollisionShape2D" type="CollisionShape2D" parent="World/Walls/Wall5"]
position = Vector2( -153.042, 50.1178 )
rotation = 0.214046
shape = SubResource( 1 )

[node name="Wall6" type="StaticBody2D" parent="World/Walls"]
position = Vector2( 181.104, -65.3652 )
rotation = -1.76669

[node name="CollisionShape2D" type="CollisionShape2D" parent="World/Walls/Wall6"]
position = Vector2( -153.042, 50.1178 )
rotation = 0.214046
shape = SubResource( 1 )

[node name="Wall3" type="StaticBody2D" parent="World/Walls"]
position = Vector2( 28.27, -82.8139 )
rotation = -1.81353

[node name="CollisionShape2D" type="CollisionShape2D" parent="World/Walls/Wall3"]
position = Vector2( -153.042, 50.1178 )
rotation = 0.214046
shape = SubResource( 1 )

[node name="Wall4" type="StaticBody2D" parent="World/Walls"]
position = Vector2( 14.9216, -96.1623 )
rotation = -1.81353

[node name="CollisionShape2D" type="CollisionShape2D" parent="World/Walls/Wall4"]
position = Vector2( -163.948, -0.990875 )
rotation = -0.273745
scale = Vector2( 1, 0.360264 )
shape = SubResource( 1 )

[node name="Wall8" type="StaticBody2D" parent="World/Walls"]
position = Vector2( 152.807, -71.4136 )
rotation = -1.81353

[node name="CollisionShape2D" type="CollisionShape2D" parent="World/Walls/Wall8"]
position = Vector2( -166.134, -1.48294 )
rotation = 0.201094
scale = Vector2( 1, 0.360264 )
shape = SubResource( 1 )

[node name="Wall10" type="StaticBody2D" parent="World/Walls"]
position = Vector2( 157.217, -24.4815 )
rotation = -1.81353
scale = Vector2( 1.00359, 1.1825 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="World/Walls/Wall10"]
position = Vector2( -166.134, -1.48294 )
rotation = 0.201094
scale = Vector2( 1, 0.360264 )
shape = SubResource( 1 )

[node name="Key" type="Node2D" parent="World"]
position = Vector2( 277, 122 )

[node name="Sprite" type="Sprite" parent="World/Key"]
texture = ExtResource( 1 )

[node name="Key_Area2D" type="Area2D" parent="World/Key"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="World/Key/Key_Area2D"]
position = Vector2( -2, 0 )
shape = SubResource( 18 )

[node name="End" type="AnimationPlayer" parent="World"]
anims/Camera_Normal = SubResource( 20 )
anims/End = SubResource( 19 )

[node name="player_topdown" parent="." instance=ExtResource( 2 )]
position = Vector2( 98.7815, 111.194 )

[node name="Control" type="CanvasLayer" parent="."]

[node name="Interaction_Prompt" type="RichTextLabel" parent="Control"]
margin_top = 192.0
margin_right = 360.0
margin_bottom = 240.0
rect_clip_content = false
theme = SubResource( 15 )
custom_fonts/normal_font = ExtResource( 8 )
bbcode_enabled = true
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="TransitionSprite" type="Sprite" parent="Control"]
position = Vector2( 180, 120 )
texture = ExtResource( 9 )

[node name="Transition_AnimationPlayer" type="AnimationPlayer" parent="Control"]
anims/FadeIn = SubResource( 16 )
anims/FadeOut = SubResource( 17 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 180, 120 )
current = true
zoom = Vector2( 0.7, 0.7 )
[connection signal="body_entered" from="World/Key/Key_Area2D" to="." method="_on_Key_Area2D_body_entered"]
[connection signal="body_exited" from="World/Key/Key_Area2D" to="." method="_on_Key_Area2D_body_exited"]
